fix(card): action bar spacing, remove order attrs
Card sections use DOM source order rather than flex order. This makes it so that an action bar can go in between content and the footer, and have any number of combinations.

Closes #2403

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -12,16 +12,21 @@ md-card {
 
   > img,
   > :not(md-card-content) img {
-    order: 0;
     width: 100%;
   }
 
   md-card-content {
-    order: 1;
     padding: $card-padding;
   }
+  md-action-bar {
+    margin: 0;
+
+    .md-button {
+      margin-bottom: $card-margin;
+      margin-top: $card-margin;
+    }
+  }
   md-card-footer {
-    order: 2;
     padding: $card-padding;
   }
 }
